--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepare": "husky install",
-    "commit": "git-cz"
+    "commit": "git-cz",
+    "start:dev": "tsx ./src/server.ts --watch"
   },
   "author": "Vinicius H C Rosa",
   "license": "ISC",
   "devDependencies": {
     "@commitlint/cli": "^17.7.1",
     "@commitlint/config-conventional": "^17.7.0",
+    "@types/express": "^4.17.17",
+    "@types/morgan": "^1.9.4",
+    "@types/multer": "^1.4.7",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
