--- a/package.json
+++ b/package.json
@@ -25,11 +25,14 @@
     "eslint-plugin-import": "^2.28.0",
     "eslint-plugin-n": "^16.0.1",
     "eslint-plugin-promise": "^6.1.1",
+    "prisma": "^5.1.1",
     "tsup": "^7.2.0",
     "tsx": "^3.12.7",
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "@prisma/client": "^5.1.1",
+    "class-validator": "^0.14.0",
     "express": "^4.18.2",
     "husky": "^8.0.3",
     "morgan": "^1.10.0",
