--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepare": "husky install",
     "commit": "git-cz",
-    "start:dev": "tsx --watch ./src/server.ts"
+    "start:dev": "tsx ./src/server.ts"
   },
   "author": "Vinicius H C Rosa",
   "license": "ISC",
