--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/express": "^4.17.17",
     "@types/morgan": "^1.9.4",
     "@types/multer": "^1.4.7",
+    "@types/pino": "^7.0.5",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
@@ -25,6 +26,7 @@
     "eslint-plugin-import": "^2.28.0",
     "eslint-plugin-n": "^16.0.1",
     "eslint-plugin-promise": "^6.1.1",
+    "pino-pretty": "^10.2.0",
     "prisma": "^5.1.1",
     "tsup": "^7.2.0",
     "tsx": "^3.12.7",
@@ -37,7 +39,8 @@
     "express": "^4.18.2",
     "husky": "^8.0.3",
     "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "pino": "^8.15.0"
   },
   "config": {
     "commitizen": {
