--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "prepare": "husky install",
     "commit": "git-cz",
-    "start:dev": "tsx ./src/server.ts",
+    "start:dev": "tsx ./src/server.ts | pino-pretty",
     "test": "vitest"
   },
   "author": "Vinicius H C Rosa",
